<resources>
    <string name="app_name">androidCardTerminal</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Card Fragment</string>
    <string name="second_fragment_label">Pin Fragment</string>
    <string name="main_fragment_label">Main Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="textview">TextView</string>
    <string name="card_output">Card Output</string>
    <string name="client_output">Client Output</string>
    <string name="clock">23:47:33</string>
    <string name="if_teh">IF-TEH</string>
    <string name="company_attribute">Terminal</string>
    <string name="tv_date">ponedjeljak, 11. travnja 2023.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_pin">Unesi pin</string>
    <string name="wrong_pin_message">Incorrect PIN. Please try again.</string>
    <string name="larusip">192.168.0.200</string>
    <string name="larusport">8005</string>
    <string name="serverip">http://sucic.info/b0pass/b0pass_iftp2.php</string>
    <string name="serverport">80</string>
    <string name="server_constant">/b0pass/b0pass_iftp2.php</string>
    <string name="larus_ip_adresa">Larus IP adresa</string>
    <string name="larus_port">Larus port</string>
    <string name="server_ip_adresa">Server IP adresa</string>
    <string name="server_port">Server port</string>
    <string name="please_scan_card">Molimo očitajte karticu.</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="app_admin_receiver">AppAdminReceiver</string>
    <string name="sample_device_admin">admin</string>
    <string name="admin_receiver_status">admin</string>
    <string name="admin_receiver_status_enabled">admin_enabled</string>
    <string name="admin_receiver_status_disable_warning">admin_disable_warning</string>
    <string name="admin_receiver_status_disabled">admin_disabled</string>
    <string name="contractor_fragent_label">Contractor Fragment</string>
    <string name="iftterm_id">IFTTERM2_B0_ID</string>
    <string name="adamuserename_port">Adam username</string>
    <string name="adampassword">Adam password\n</string>
    <string name="adamusername">Adam username</string>
    <string name="adamIP">Adam IP</string>
    <string name="adam_relay_num">0</string>
    <string name="adamrelaynum">Adam relay number</string>
    <string name="please_scan_card_2">Odaberite vrstu očitanja</string>

</resources>