<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"

    app:startDestination="@id/MainFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.card.terminal.fragments.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">
        <action
            android:id="@+id/action_FirstFragment_to_mainFragment"
            app:destination="@id/MainFragment" />
    </fragment>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.card.terminal.fragments.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">
        <action
            android:id="@+id/action_SecondFragment_to_mainFragment"
            app:destination="@id/MainFragment" />
    </fragment>
    <fragment
        android:id="@+id/SettingsFragment"
        android:name="com.card.terminal.fragments.SettingsFragment"
        android:label="SettingsFragment"
        tools:layout="@layout/fragment_settings">
        <action
            android:id="@+id/action_SettingsFragment_to_mainFragment"
            app:destination="@id/MainFragment" />
    </fragment>
    <fragment
        android:id="@+id/MainFragment"
        android:name="com.card.terminal.fragments.MainFragment"
        android:label="@string/main_fragment_label"
        tools:layout="@layout/fragment_main" >
        <action
            android:id="@+id/action_mainFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
        <action
            android:id="@+id/action_mainFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
        <action
            android:id="@+id/action_mainFragment_to_SettingsFragment"
            app:destination="@id/SettingsFragment" />
    </fragment>
</navigation>